# subliminal

./: .env.example  .gitignore  EXPERIMENT_PLAN.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/data/: evaluation.yaml  existing_eagle_numbers.yaml  paired_numbers.yaml  synthetic_arithmetic.yaml
configs/experiment/: cross_model_gemma4b.yaml  pilot_qwen7b.yaml  replicate_eagle_qwen14b.yaml
configs/model/: gemma3_4b.yaml  qwen2_5_0_5b_smoke.yaml  qwen2_5_14b.yaml  qwen2_5_7b.yaml
notebooks/: 00_environment_and_configuration.ipynb  01_dataset_audit_and_splits.ipynb  02_behavioral_baselines_and_random_icl_null.ipynb  03_train_or_load_subliminal_donor.ipynb  04_extract_trait_representations.ipynb  05_causal_validate_trait_subspace.ipynb  06_trace_storage_and_retrieval.ipynb  07_score_existing_number_rows.ipynb  08_selection_only_context_search.ipynb  09_clean_replay_behavioral_evaluation.ipynb  10_activation_compiled_math_cot.ipynb  11_causal_mediation_and_ablations.ipynb  12_statistics_robustness_and_report.ipynb  99_full_tree_smoke_test.ipynb
reports/: protocol_changes.md  status.json
scripts/: _common.py  build_eval_split.py  build_report.py  clean_replay_eval.py  download_data.py  extract_activations.py  generate_arithmetic.py  generate_paired_numbers.py  print_config.py  run_baseline_eval.py  run_notebooks_smoke.py  run_pilot.py  score_candidates.py  search_contexts.py  train_donor_lora.py
slurm/: 00_env_and_tests.slurm  01_data_prep.slurm  02_baseline_qwen7b.slurm  03_pilot_array.slurm  03_pilot_qwen7b.slurm  04_replicate_eagle_qwen14b.slurm  05_cross_model_gemma4b.slurm  06_final_report.slurm  PARALLELISM.md  README.md
slurm/logs/: 01_data_16756092.err  01_data_16756092.out  02_baseline_16756098.err  02_baseline_16756098.out  03_pilot7b_16757133.err  03_pilot7b_16757133.out
slurm/phases/: 03a_donor.slurm  03b_subspace.slurm  03c_causal.slurm  (+2 more)
tests/: conftest.py
(+40 files in other folders)
