[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subliminal-icl"
version = "0.1.0"
description = "Activation-guided in-context subliminal prompting: reconstruct a causally validated trait representation from text-only context in a frozen model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "subliminal-icl" }]

# Core is intentionally light so that the pure-Python / numpy modules and the
# unit + scientific-invariant tests import and run without heavy ML deps.
# Model-dependent modules (hooks, model_adapters, patching, ...) import
# torch / transformers lazily so `import subliminal_icl` never fails.
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
    "transformers>=4.44",
    "accelerate>=0.33",
    "peft>=0.12",
    "datasets>=2.20",
    "safetensors>=0.4",
    "einops>=0.8",
]
science = [
    "pandas>=2.0",
    "pyarrow>=15",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "zarr>=2.17",
]
notebooks = [
    "jupyterlab>=4.2",
    "ipywidgets>=8.1",
    "matplotlib>=3.8",
    "plotly>=5.22",
    "rich>=13.7",
    "tqdm>=4.66",
]
dev = [
    "pytest>=8.2",
    "pytest-xdist>=3.6",
    "nbmake>=1.5",
    "pydantic>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast pure-python/numpy unit tests",
    "integration: tests that require torch/transformers or the smoke model",
    "scientific: scientific-invariant tests that fail loudly on invalid interpretation",
    "notebook: notebook smoke tests via nbmake",
    "gpu: requires a CUDA device",
    "needs_ml: requires torch + transformers to be installed",
]
addopts = "-ra"
